[gd_scene load_steps=10 format=3 uid="uid://dt8777gppij64"]

[ext_resource type="Script" path="res://scripts/weapons/projectiles/robotics/turrets/optics.gd" id="1_lh2yd"]

[sub_resource type="BoxMesh" id="BoxMesh_fdkj5"]
size = Vector3(0.5, 0.2, 0.5)

[sub_resource type="BoxMesh" id="BoxMesh_trrnt"]
size = Vector3(0.2, 0.5, 0.2)

[sub_resource type="CylinderMesh" id="CylinderMesh_iam4s"]
top_radius = 0.2
bottom_radius = 0.2
height = 0.2

[sub_resource type="BoxMesh" id="BoxMesh_xbegh"]
size = Vector3(0.1, 0.1, 0.8)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_4ka3k"]
height = 1.0
radius = 0.4

[sub_resource type="SphereShape3D" id="SphereShape3D_ctee0"]
radius = 5.0

[sub_resource type="SphereMesh" id="SphereMesh_6xdcb"]
radius = 5.0
height = 10.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tsxwb"]
transparency = 1
albedo_color = Color(1, 1, 0.145098, 0.0470588)

[node name="OpticsTurret" type="Node3D"]
script = ExtResource("1_lh2yd")

[node name="TurretBody" type="CharacterBody3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="TurretBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0910389, 0)
mesh = SubResource("BoxMesh_fdkj5")
skeleton = NodePath("../Gun")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="TurretBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.351457, 0)
mesh = SubResource("BoxMesh_trrnt")
skeleton = NodePath("../Gun")

[node name="Gun" type="Node3D" parent="TurretBody"]

[node name="MeshInstance3D3" type="MeshInstance3D" parent="TurretBody/Gun"]
transform = Transform3D(1, 0, 0, 0, 0.00289721, 0.999996, 0, -0.999996, 0.00289722, 0, 0.649282, 0.183655)
mesh = SubResource("CylinderMesh_iam4s")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="TurretBody/Gun"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.623421, -0.280612)
mesh = SubResource("BoxMesh_xbegh")

[node name="Marker3D" type="Marker3D" parent="TurretBody/Gun"]
transform = Transform3D(-0.00289719, 0, 0.999997, 0, 1, 0, -0.999997, 0, -0.00289719, -4.43913e-05, 0.599648, -0.72605)

[node name="CollisionShape3D" type="CollisionShape3D" parent="TurretBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("CylinderShape3D_4ka3k")

[node name="OpticsAura" type="Area3D" parent="TurretBody"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="TurretBody/OpticsAura"]
shape = SubResource("SphereShape3D_ctee0")

[node name="MeshInstance3D" type="MeshInstance3D" parent="TurretBody/OpticsAura"]
mesh = SubResource("SphereMesh_6xdcb")
surface_material_override/0 = SubResource("StandardMaterial3D_tsxwb")

[connection signal="body_entered" from="TurretBody/OpticsAura" to="." method="add_magnet_component"]
